@@ -1,3 +1,10 @@
+2013-01-16  Alan Modra  <amodra@gmail.com>
+
+	PR binutils/15018
+	* stabs.c (parse_stab_members): Always set physname here to avoid
+	gcc warning..
+	(parse_stab_argtypes): ..and don't duplicate the init here.
+
 2013-01-10  Will Newton <will.newton@imgtec.com>
 
 	* binutils/readelf.c: (guess_is_rela): Add EM_METAG.
